--- a/pom.xml
+++ b/pom.xml
@@ -325,6 +325,12 @@
             <artifactId>lombok</artifactId>
             <version>1.18.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.asynchttpclient</groupId>
+            <artifactId>async-http-client</artifactId>
+            <version>2.1.0-alpha21</version>
+        </dependency>
     </dependencies>
 
     <build>
